[tool.poetry]
name = "check403unlocker-be"
version = "0.1.0"
description = ""
authors = ["Arshiya-python-developer <arshiyakhalili6@gmail.com>"]
readme = "README.md"
packages = [{include = "check403unlocker_be"}]

[tool.poetry.dependencies]
python = "3.11.9"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.111.1"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
